# smite

.github/workflows/: docker.yml
scripts/: smite-evaluation.py
smite-ir-mutator/src/: lib.rs
smite-ir/src/: builder.rs  generators.rs  operation.rs  program.rs  tests.rs  variable.rs
smite-ir/src/generators/: channel_update.rs  node_announcement.rs
smite-ir/src/mutators/: operation_param.rs
smite-scenarios/src/: executor.rs  scenarios.rs
smite-scenarios/src/scenarios/: encrypted_bytes.rs  init.rs  ir.rs  noise.rs  setup.rs
smite/src/: bitcoin.rs  bolt.rs  lib.rs  process.rs  violation.rs
smite/src/bolt/: accept_channel2.rs  attribution_data.rs  channel_announcement.rs  channel_ready.rs  init.rs  node_announcement.rs  open_channel2.rs  tlv.rs  tx_ack_rbf.rs  tx_add_input.rs  tx_init_rbf.rs  update_fail_htlc.rs  update_fulfill_htlc.rs  wire.rs
smite/src/channel_tx/: commitment.rs
smite/src/noise/: handshake.rs
smitebot/: Cargo.toml  README.md
smitebot/src/: commands.rs  config.rs  main.rs  state.rs  tmux.rs  utils.rs
smitebot/src/commands/: build.rs  doctor.rs  start.rs  stop.rs
workloads/cln/: Dockerfile  Dockerfile.coverage
workloads/eclair/: Dockerfile  Dockerfile.coverage  init.sh
workloads/ldk/: Dockerfile  Dockerfile.coverage
workloads/lnd/: Dockerfile  Dockerfile.coverage
